--- a/V2/index.html
+++ b/V2/index.html
@@ -57,264 +57,266 @@
 			</section>
 		</aside>
 		<main>
-			<header>
-				<search>
-					<form action="/" method="post" role="search" class="search-bar">
-						<input
-							type="search"
-							name="q"
-							placeholder="Search..."
-							aria-label="Search the site"
-							required
-							autocomplete="off"
-						/>
-					</form>
-				</search>
-				<div class="user">
-					<p class="gray">UserName</p>
-					<img src="../assets/app.png" alt="" />
+			<div class="box">
+				<header>
+					<search>
+						<form action="/" method="post" role="search" class="search-bar">
+							<input
+								type="search"
+								name="q"
+								placeholder="Search..."
+								aria-label="Search the site"
+								required
+								autocomplete="off"
+							/>
+						</form>
+					</search>
+					<div class="user">
+						<p class="gray">UserName</p>
+						<img src="../assets/app.png" alt="" />
+					</div>
+				</header>
+				<div class="content-container">
+					<section class="suggestion">
+						<div class="suggestion-title">
+							<hgroup>
+								<h2>Suggestion</h2>
+								<p class="black"><span class="orange">Nouveau</span> sport</p>
+							</hgroup>
+							<button class="bg-color-orange">
+								<span class="material-symbols-outlined"> mic </span>Enregistrer
+								un recit
+							</button>
+						</div>
+						<div class="grid">
+							<article class="card" id="a" tabindex="0">
+								<div class="empty-img">
+									<div>
+										<span
+											class="material-symbols-outlined"
+											data-icon="favorite"
+											tabindex="0"
+										>
+											favorite
+										</span>
+									</div>
+									<p class="card-genre">nature</p>
+								</div>
+								<h3 class="card-title">Title</h3>
+							</article>
+							<article class="card" id="b" tabindex="0">
+								<div class="empty-img">
+									<div>
+										<span
+											class="material-symbols-outlined"
+											data-icon="favorite"
+											tabindex="0"
+										>
+											favorite
+										</span>
+									</div>
+									<p class="card-genre">nature</p>
+								</div>
+								<h3 class="card-title">Title</h3>
+							</article>
+							<article class="card" id="c" tabindex="0">
+								<div class="empty-img">
+									<div>
+										<span
+											class="material-symbols-outlined"
+											data-icon="favorite"
+											tabindex="0"
+										>
+											favorite
+										</span>
+									</div>
+									<p class="card-genre">nature</p>
+								</div>
+								<h3 class="card-title">Title</h3>
+							</article>
+							<article class="card" id="d" tabindex="0">
+								<div class="empty-img">
+									<div>
+										<span
+											class="material-symbols-outlined"
+											data-icon="favorite"
+											tabindex="0"
+										>
+											favorite
+										</span>
+									</div>
+									<p class="card-genre">nature</p>
+								</div>
+								<h3 class="card-title">Title</h3>
+							</article>
+							<article class="card" id="e" tabindex="0">
+								<div class="empty-img">
+									<div>
+										<span
+											class="material-symbols-outlined"
+											data-icon="favorite"
+											tabindex="0"
+										>
+											favorite
+										</span>
+									</div>
+									<p class="card-genre">nature</p>
+								</div>
+								<h3 class="card-title">Title</h3>
+							</article>
+						</div>
+					</section>
+					<section class="thematique">
+						<article class="card-them-play" tabindex="0">
+							<img src="../assets/image.png" alt="" role="presentation" />
+							<div class="autre-content">
+								<div class="autre-title">
+									<hgroup>
+										<h3>Title</h3>
+										<p class="progress-subtitle">subtitle</p>
+									</hgroup>
+									<div>
+										<span
+											class="material-symbols-outlined"
+											data-icon="favorite"
+											tabindex="0"
+										>
+											favorite
+										</span>
+									</div>
+								</div>
+								<div class="progress">
+									<p class="time">3min 56s</p>
+									<div class="progress-container">
+										<span
+											class="material-symbols-outlined"
+											data-icon="play"
+											tabindex="0"
+										>
+											play_circle
+										</span>
+										<progress class="player-progress" max="100" value="70">
+											70%
+										</progress>
+									</div>
+								</div>
+							</div>
+						</article>
+						<article class="card-them-play" tabindex="0">
+							<img src="../assets/image.png" alt="" role="presentation" />
+							<div class="autre-content">
+								<div class="autre-title">
+									<hgroup>
+										<h3>Title</h3>
+										<p class="progress-subtitle">subtitle</p>
+									</hgroup>
+									<div>
+										<span
+											class="material-symbols-outlined"
+											data-icon="favorite"
+											tabindex="0"
+										>
+											favorite
+										</span>
+									</div>
+								</div>
+								<div class="progress">
+									<p class="time">3min 56s</p>
+									<div class="progress-container">
+										<span
+											class="material-symbols-outlined"
+											data-icon="play"
+											tabindex="0"
+										>
+											play_circle
+										</span>
+										<progress class="player-progress" max="100" value="70">
+											70%
+										</progress>
+									</div>
+								</div>
+							</div>
+						</article>
+					</section>
+					<section class="autre">
+						<article class="card-autre" tabindex="0">
+							<div class="empty-img">
+								<div>
+									<span
+										class="material-symbols-outlined"
+										data-icon="favorite"
+										tabindex="0"
+									>
+										favorite
+									</span>
+								</div>
+								<p class="card-genre">nature</p>
+							</div>
+							<h3 class="card-title">Title</h3>
+						</article>
+						<article class="card-autre">
+							<div class="empty-img">
+								<div>
+									<span
+										class="material-symbols-outlined"
+										data-icon="favorite"
+										tabindex="0"
+									>
+										favorite
+									</span>
+								</div>
+								<p class="card-genre">nature</p>
+							</div>
+							<h3 class="card-title">Title</h3>
+						</article>
+						<article class="card-autre" tabindex="0">
+							<div class="empty-img">
+								<div>
+									<span
+										class="material-symbols-outlined"
+										data-icon="favorite"
+										tabindex="0"
+									>
+										favorite
+									</span>
+								</div>
+								<p class="card-genre">nature</p>
+							</div>
+							<h3 class="card-title">Title</h3>
+						</article>
+						<article class="card-autre" tabindex="0">
+							<div class="empty-img">
+								<div>
+									<span
+										class="material-symbols-outlined"
+										data-icon="favorite"
+										tabindex="0"
+									>
+										favorite
+									</span>
+								</div>
+								<p class="card-genre">nature</p>
+							</div>
+							<h3 class="card-title">Title</h3>
+						</article>
+						<article class="card-autre" tabindex="0">
+							<div class="empty-img">
+								<div>
+									<span
+										class="material-symbols-outlined"
+										data-icon="favorite"
+										tabindex="0"
+									>
+										favorite
+									</span>
+								</div>
+								<p class="card-genre">nature</p>
+							</div>
+							<h3 class="card-title">Title</h3>
+						</article>
+					</section>
+					<progress class="default" max="100" value="70">70%</progress>
 				</div>
-			</header>
-			<div class="content-container">
-				<section class="suggestion">
-					<div class="suggestion-title">
-						<hgroup>
-							<h2>Suggestion</h2>
-							<p class="black"><span class="orange">Nouveau</span> sport</p>
-						</hgroup>
-						<button class="bg-color-orange">
-							<span class="material-symbols-outlined"> mic </span>Enregistrer un
-							recit
-						</button>
-					</div>
-					<div class="grid">
-						<article class="card" id="a" tabindex="0">
-							<div class="empty-img">
-								<div>
-									<span
-										class="material-symbols-outlined"
-										data-icon="favorite"
-										tabindex="0"
-									>
-										favorite
-									</span>
-								</div>
-								<p class="card-genre">nature</p>
-							</div>
-							<h3 class="card-title">Title</h3>
-						</article>
-						<article class="card" id="b" tabindex="0">
-							<div class="empty-img">
-								<div>
-									<span
-										class="material-symbols-outlined"
-										data-icon="favorite"
-										tabindex="0"
-									>
-										favorite
-									</span>
-								</div>
-								<p class="card-genre">nature</p>
-							</div>
-							<h3 class="card-title">Title</h3>
-						</article>
-						<article class="card" id="c" tabindex="0">
-							<div class="empty-img">
-								<div>
-									<span
-										class="material-symbols-outlined"
-										data-icon="favorite"
-										tabindex="0"
-									>
-										favorite
-									</span>
-								</div>
-								<p class="card-genre">nature</p>
-							</div>
-							<h3 class="card-title">Title</h3>
-						</article>
-						<article class="card" id="d" tabindex="0">
-							<div class="empty-img">
-								<div>
-									<span
-										class="material-symbols-outlined"
-										data-icon="favorite"
-										tabindex="0"
-									>
-										favorite
-									</span>
-								</div>
-								<p class="card-genre">nature</p>
-							</div>
-							<h3 class="card-title">Title</h3>
-						</article>
-						<article class="card" id="e" tabindex="0">
-							<div class="empty-img">
-								<div>
-									<span
-										class="material-symbols-outlined"
-										data-icon="favorite"
-										tabindex="0"
-									>
-										favorite
-									</span>
-								</div>
-								<p class="card-genre">nature</p>
-							</div>
-							<h3 class="card-title">Title</h3>
-						</article>
-					</div>
-				</section>
-				<section class="thematique">
-					<article class="card-them-play" tabindex="0">
-						<img src="../assets/image.png" alt="" role="presentation" />
-						<div class="autre-content">
-							<div class="autre-title">
-								<hgroup>
-									<h3>Title</h3>
-									<p class="progress-subtitle">subtitle</p>
-								</hgroup>
-								<div>
-									<span
-										class="material-symbols-outlined"
-										data-icon="favorite"
-										tabindex="0"
-									>
-										favorite
-									</span>
-								</div>
-							</div>
-							<div class="progress">
-								<p class="time">3min 56s</p>
-								<div class="progress-container">
-									<span
-										class="material-symbols-outlined"
-										data-icon="play"
-										tabindex="0"
-									>
-										play_circle
-									</span>
-									<progress class="player-progress" max="100" value="70">
-										70%
-									</progress>
-								</div>
-							</div>
-						</div>
-					</article>
-					<article class="card-them-play" tabindex="0">
-						<img src="../assets/image.png" alt="" role="presentation" />
-						<div class="autre-content">
-							<div class="autre-title">
-								<hgroup>
-									<h3>Title</h3>
-									<p class="progress-subtitle">subtitle</p>
-								</hgroup>
-								<div>
-									<span
-										class="material-symbols-outlined"
-										data-icon="favorite"
-										tabindex="0"
-									>
-										favorite
-									</span>
-								</div>
-							</div>
-							<div class="progress">
-								<p class="time">3min 56s</p>
-								<div class="progress-container">
-									<span
-										class="material-symbols-outlined"
-										data-icon="play"
-										tabindex="0"
-									>
-										play_circle
-									</span>
-									<progress class="player-progress" max="100" value="70">
-										70%
-									</progress>
-								</div>
-							</div>
-						</div>
-					</article>
-				</section>
-				<section class="autre">
-					<article class="card-autre" tabindex="0">
-						<div class="empty-img">
-							<div>
-								<span
-									class="material-symbols-outlined"
-									data-icon="favorite"
-									tabindex="0"
-								>
-									favorite
-								</span>
-							</div>
-							<p class="card-genre">nature</p>
-						</div>
-						<h3 class="card-title">Title</h3>
-					</article>
-					<article class="card-autre">
-						<div class="empty-img">
-							<div>
-								<span
-									class="material-symbols-outlined"
-									data-icon="favorite"
-									tabindex="0"
-								>
-									favorite
-								</span>
-							</div>
-							<p class="card-genre">nature</p>
-						</div>
-						<h3 class="card-title">Title</h3>
-					</article>
-					<article class="card-autre" tabindex="0">
-						<div class="empty-img">
-							<div>
-								<span
-									class="material-symbols-outlined"
-									data-icon="favorite"
-									tabindex="0"
-								>
-									favorite
-								</span>
-							</div>
-							<p class="card-genre">nature</p>
-						</div>
-						<h3 class="card-title">Title</h3>
-					</article>
-					<article class="card-autre" tabindex="0">
-						<div class="empty-img">
-							<div>
-								<span
-									class="material-symbols-outlined"
-									data-icon="favorite"
-									tabindex="0"
-								>
-									favorite
-								</span>
-							</div>
-							<p class="card-genre">nature</p>
-						</div>
-						<h3 class="card-title">Title</h3>
-					</article>
-					<article class="card-autre" tabindex="0">
-						<div class="empty-img">
-							<div>
-								<span
-									class="material-symbols-outlined"
-									data-icon="favorite"
-									tabindex="0"
-								>
-									favorite
-								</span>
-							</div>
-							<p class="card-genre">nature</p>
-						</div>
-						<h3 class="card-title">Title</h3>
-					</article>
-				</section>
-				<progress class="default" max="100" value="70">70%</progress>
 			</div>
 			<footer>
 				<img class="footer-img" src="../assets/image.png" alt="" />
