--- a/V2/index.html
+++ b/V2/index.html
@@ -337,7 +337,10 @@
 								skip_next
 							</span>
 						</div>
-						<div></div>
+						<div class="more-options">
+							<span class="material-symbols-outlined" tabindex="0"> favorite </span>
+							<span class="material-symbols-outlined" tabindex="0"> add_circle </span>
+						</div>
 					</div>
 					<progress class="player-progress" max="100" value="70">70%</progress>
 				</div>
