--- a/V2/index.html
+++ b/V2/index.html
@@ -327,19 +327,29 @@
 							<p class="progress-subtitle">Subtitle</p>
 						</hgroup>
 						<div class="player-icons">
-							<span class="material-symbols-outlined" tabindex="0">
+							<span class="material-symbols-outlined" data-icon="skip" tabindex="0">
 								skip_previous
 							</span>
-							<span class="material-symbols-outlined" tabindex="0">
+							<span class="material-symbols-outlined" data-icon="player" tabindex="0">
 								play_circle
 							</span>
-							<span class="material-symbols-outlined" tabindex="0">
+							<span class="material-symbols-outlined" data-icon="skip" tabindex="0">
 								skip_next
 							</span>
 						</div>
 						<div class="more-options">
-							<span class="material-symbols-outlined" tabindex="0"> favorite </span>
-							<span class="material-symbols-outlined" tabindex="0"> add_circle </span>
+							<span class="material-symbols-outlined" tabindex="0">
+								favorite
+							</span>
+							<span class="material-symbols-outlined" tabindex="0">
+								add_circle
+							</span>
+							<span class="material-symbols-outlined" tabindex="0">
+								volume_down
+							</span>
+							<progress class="player-progress" max="100" value="70">
+								70%
+							</progress>
 						</div>
 					</div>
 					<progress class="player-progress" max="100" value="70">70%</progress>
